# excelCP2mdtable

./: pyproject.toml  readme.md
src/excel_to_md_table/: main.py
tests/: test_main.py
