[tool.poetry]
name = "excel-to-md-table"
version = "0.1.0"
description = "将Excel内容转换为Markdown表格的命令行工具"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "excel_to_md_table", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
excel-to-md-table = "excel_to_md_table.main:main"